--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web3-learning",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.7",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "bufferutil": "^4.0.7",
+    "encoding": "^0.1.13",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "lokijs": "^1.5.12",
     "next": "13.4.10",
+    "pino-pretty": "^10.2.0",
     "postcss": "8.4.26",
+    "random-gradient": "^0.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "simplebar-react": "^3.2.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "utf-8-validate": "^5.0.2",
+    "viem": "^1.4.1",
+    "vivus": "^0.4.6",
+    "wagmi": "^1.3.9"
+  },
+  "devDependencies": {
+    "@types/random-gradient": "^0.0.0",
+    "@types/vivus": "^0.4.4",
+    "react-icons": "^4.10.1"
   }
 }
