--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.5",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -18,6 +22,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "framer-motion": "^10.13.1",
     "lokijs": "^1.5.12",
     "next": "13.4.10",
     "pino-pretty": "^10.2.0",
@@ -26,7 +31,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "simplebar-react": "^3.2.4",
-    "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "utf-8-validate": "^5.0.2",
     "viem": "^1.4.1",
@@ -36,6 +40,7 @@
   "devDependencies": {
     "@types/random-gradient": "^0.0.0",
     "@types/vivus": "^0.4.4",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "tailwindcss": "3.3.3"
   }
 }
