--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "utf-8-validate": "^5.0.2",
     "viem": "^1.4.1",
     "vivus": "^0.4.6",
-    "wagmi": "^1.3.9"
+    "wagmi": "^1.3.9",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/random-gradient": "^0.0.0",
