--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.16",
+    "@nextui-org/react": "^2.0.19",
+    "@nextui-org/system": "^2.0.5",
+    "@nextui-org/theme": "^2.0.5",
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -35,6 +38,7 @@
     "react-jazzicon": "^1.0.4",
     "simplebar-react": "^3.2.4",
     "typescript": "5.1.6",
+    "usehooks-ts": "^2.9.1",
     "utf-8-validate": "^5.0.2",
     "viem": "^1.4.1",
     "vivus": "^0.4.6",
