--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_ALCHEMY_API_KEY="JExivQhdZUxlBMx2GfJtMedOD2BhtNTE"
-NEXT_PUBLIC_PROJECT_ID="99776941c6dde4adae09841308a2353e"
+VITE_ALCHEMY_API_KEY="JExivQhdZUxlBMx2GfJtMedOD2BhtNTE"
+VITE_PROJECT_ID="99776941c6dde4adae09841308a2353e"
