--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,43 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080 ",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "depcheck": ""
   },
   "dependencies": {
-    "@chakra-ui/next-js": "^2.1.5",
-    "@chakra-ui/react": "^2.8.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.16",
     "@nextui-org/react": "^2.0.19",
     "@nextui-org/system": "^2.0.5",
     "@nextui-org/theme": "^2.0.5",
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "bufferutil": "^4.0.7",
-    "encoding": "^0.1.13",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
     "ethers": "^6.6.5",
     "framer-motion": "^10.13.1",
-    "lokijs": "^1.5.12",
     "next": "13.4.10",
+    "path": "^0.12.7",
     "pino-pretty": "^10.2.0",
     "postcss": "8.4.26",
     "random-gradient": "^0.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-jazzicon": "^1.0.4",
+    "react-router-dom": "^6.15.0",
     "simplebar-react": "^3.2.4",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1",
-    "utf-8-validate": "^5.0.2",
     "viem": "^1.4.1",
     "vivus": "^0.4.6",
     "wagmi": "^1.3.9",
@@ -47,8 +37,18 @@
   },
   "devDependencies": {
     "@types/random-gradient": "^0.0.0",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/vivus": "^0.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.46.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "vite": "^4.4.9"
   }
 }
