--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "depcheck": ""
+    "depcheck": "depcheck"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
