--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "depcheck": "depcheck"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.16",
     "@nextui-org/react": "^2.0.19",
     "@nextui-org/system": "^2.0.5",
